Wrote blogpost about nullish coalescing operator

--- a/src/blog/the-initial-git-commit/index.mdx
+++ b/src/blog/the-initial-git-commit/index.mdx
@@ -38,3 +38,5 @@ This is a stupid (but extremely fast) directory content manager.  It
 doesn't do a whole lot, but what it _does_ do is track directory
 contents efficiently.
 ```
+
+I love that you can still find this part of the original README in the [current README file](https://github.com/git/git/blob/master/README.md).
